--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -136,187 +136,4 @@
             databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
             projectId: "cabana-8d55e",
             storageBucket: "cabana-8d55e.appspot.com",
-            messagingSenderId: "706144237954",
-            appId: "1:706144237954:web:345c10370972486afc779b",
-            measurementId: "G-96Y337GYT8"
-        };
-        firebase.initializeApp(firebaseConfig);
-
-        const database = firebase.database();
-        const storage = firebase.storage();
-        const chatMessages = document.getElementById('chat-messages');
-        const messageInput = document.getElementById('message-input');
-        const sendButton = document.getElementById('send-button');
-        const audioButton = document.getElementById('audio-button');
-        const audioRecording = document.getElementById('audio-recording');
-        const chatList = document.getElementById('chat-list');
-        const clearAllChatsButton = document.getElementById('clear-all-chats');
-
-        let currentChat = null;
-
-        function addMessageToChat(message) {
-            const messageElement = document.createElement('div');
-            messageElement.classList.add('message');
-            messageElement.classList.add(message.sender === 'Atendente' ? 'sent' : 'received');
-            if (message.type === 'text') {
-                messageElement.textContent = `${message.sender}: ${message.text}`;
-            } else if (message.type === 'audio') {
-                const audioElement = document.createElement('audio');
-                audioElement.controls = true;
-                audioElement.src = message.text;
-                messageElement.appendChild(audioElement);
-            }
-            chatMessages.appendChild(messageElement);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        }
-
-        database.ref('messages').on('child_added', (snapshot) => {
-            const message = snapshot.val();
-            if (message.sender !== 'Atendente' && !document.getElementById(message.sender)) {
-                updateChatList(message);
-            }
-            if (currentChat === message.sender || currentChat === null) {
-                addMessageToChat(message);
-            }
-            showNotification(message);
-        });
-
-        function sendMessage() {
-            const messageText = messageInput.value.trim();
-            if (messageText) {
-                const message = {
-                    sender: 'Atendente',
-                    text: messageText,
-                    type: 'text',
-                    timestamp: firebase.database.ServerValue.TIMESTAMP,
-                    recipient: currentChat || 'general'
-                };
-                database.ref('messages').push(message)
-                    .then(() => {
-                        console.log('Mensagem enviada com sucesso');
-                        messageInput.value = '';
-                    })
-                    .catch((error) => {
-                        console.error('Erro ao enviar mensagem:', error);
-                    });
-            }
-        }
-
-        sendButton.addEventListener('click', sendMessage);
-
-        messageInput.addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
-                e.preventDefault();
-                sendMessage();
-            }
-        });
-
-        let mediaRecorder;
-        let audioChunks = [];
-
-        audioButton.addEventListener('click', () => {
-            if (audioButton.textContent === 'Gravar Áudio') {
-                navigator.mediaDevices.getUserMedia({ audio: true })
-                    .then(stream => {
-                        mediaRecorder = new MediaRecorder(stream);
-                        mediaRecorder.ondataavailable = e => {
-                            audioChunks.push(e.data);
-                            if (mediaRecorder.state === 'inactive') {
-                                let blob = new Blob(audioChunks, { type: 'audio/webm' });
-                                const storageRef = storage.ref('audio/' + Date.now() + '.webm');
-                                storageRef.put(blob).then(snapshot => {
-                                    snapshot.ref.getDownloadURL().then(downloadURL => {
-                                        const message = {
-                                            sender: 'Atendente',
-                                            text: downloadURL,
-                                            type: 'audio',
-                                            timestamp: firebase.database.ServerValue.TIMESTAMP,
-                                            recipient: currentChat || 'general'
-                                        };
-                                        database.ref('messages').push(message);
-                                    });
-                                });
-                                audioChunks = [];
-                            }
-                        };
-                        mediaRecorder.start();
-                        audioRecording.style.display = 'flex';
-                        audioButton.textContent = 'Parar Gravação';
-                    })
-                    .catch(error => {
-                        console.error('Erro ao acessar o microfone:', error);
-                    });
-            } else if (audioButton.textContent === 'Parar Gravação') {
-                mediaRecorder.stop();
-                audioRecording.style.display = 'none';
-                audioButton.textContent = 'Gravar Áudio';
-            }
-        });
-
-        function showNotification(message) {
-            if (Notification.permission === "granted" && message.sender !== 'Atendente') {
-                const notification = new Notification("Nova mensagem no chat", {
-                    body: `${message.sender}: ${message.text}`,
-                    icon: 'https://example.com/icon.png' // Substitua com o URL do seu ícone
-                });
-                notification.onclick = function() {
-                    window.focus();
-                    this.close();
-                };
-                // Emitir som de notificação
-                const audio = new Audio('https://example.com/notification.mp3'); // Substitua com o URL do seu som de notificação
-                audio.play();
-            } else if (Notification.permission !== "denied") {
-                Notification.requestPermission().then(permission => {
-                    if (permission === "granted") {
-                        showNotification(message);
-                    }
-                });
-            }
-        }
-
-        function requestNotificationPermission() {
-            if (Notification.permission !== "granted") {
-                Notification.requestPermission().then(permission => {
-                    if (permission === "granted") {
-                        console.log("Permissão de notificação concedida");
-                    }
-                });
-            }
-        }
-
-        requestNotificationPermission();
-
-        function updateChatList(message) {
-            const chatItem = document.createElement('div');
-            chatItem.id = message.sender;
-            chatItem.className = 'chat-item';
-            chatItem.textContent = message.sender;
-            chatItem.onclick = () => {
-                currentChat = message.sender;
-                chatMessages.innerHTML = '';
-                database.ref('messages').orderByChild('sender').equalTo(message.sender).once('value', (snapshot) => {
-                    snapshot.forEach((childSnapshot) => {
-                        addMessageToChat(childSnapshot.val());
-                    });
-                });
-                database.ref('messages').orderByChild('recipient').equalTo(message.sender).once('value', (snapshot) => {
-                    snapshot.forEach((childSnapshot) => {
-                        addMessageToChat(childSnapshot.val());
-                    });
-                });
-            };
-            chatList.appendChild(chatItem);
-        }
-
-        clearAllChatsButton.addEventListener('click', () => {
-            if (confirm('Tem certeza que deseja limpar todos os chats?')) {
-                database.ref('messages').remove();
-                chatList.innerHTML = '';
-                chatMessages.innerHTML = '';
-                currentChat = null;
-            }
-        });
-    </script>
-</body>
-</html>
+            messagingSenderId:
