--- a/public/chat.html
+++ b/public/chat.html
@@ -30,7 +30,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         #chat-header {
-            background-color: #4CAF50;
+            background-color: #075E54;
             color: white;
             padding: 10px;
             text-align: center;
@@ -40,43 +40,41 @@
             flex-grow: 1;
             overflow-y: auto;
             padding: 10px;
+            background-color: #E5DDD5;
         }
         #chat-form {
             display: flex;
             padding: 10px;
-            border-top: 1px solid #ccc;
+            background-color: #F0F0F0;
+            align-items: center;
         }
         #message-input {
             flex-grow: 1;
-            border: 1px solid #ccc;
+            border: none;
             border-radius: 20px;
+            padding: 10px 15px;
+            font-size: 14px;
+            background-color: white;
+        }
+        #send-button, #audio-button {
+            background-color: #075E54;
+            color: white;
+            border: none;
             padding: 10px;
-            font-size: 14px;
-        }
-        #send-button {
-            margin-left: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 20px;
+            border-radius: 50%;
             cursor: pointer;
             font-size: 14px;
-        }
-        #audio-button {
             margin-left: 10px;
-            background-color: #2196F3;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 20px;
-            cursor: pointer;
-            font-size: 14px;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .message {
             margin-bottom: 10px;
             padding: 8px 12px;
-            border-radius: 20px;
+            border-radius: 7px;
             max-width: 70%;
             word-wrap: break-word;
         }
@@ -86,7 +84,7 @@
             margin-left: auto;
         }
         .received {
-            background-color: #E0E0E0;
+            background-color: white;
             align-self: flex-start;
         }
         #name-input {
@@ -97,19 +95,34 @@
             border-radius: 5px;
             font-size: 14px;
         }
-        #audio-recording {
+        #audio-controls {
             display: none;
-            justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            font-size: 18px;
+            background-color: #F0F0F0;
             padding: 10px;
-            border-radius: 10px;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+        }
+        #audio-timer {
+            margin-right: 10px;
+            font-size: 14px;
+        }
+        #cancel-audio {
+            background-color: #F44336;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-right: 10px;
+        }
+        #send-audio {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -118,13 +131,17 @@
         <div id="chat-header">Chat Motoboy</div>
         <input type="text" id="name-input" placeholder="Digite seu nome...">
         <div id="chat-messages"></div>
+        <div id="audio-controls">
+            <span id="audio-timer">00:00</span>
+            <button id="cancel-audio">Cancelar</button>
+            <button id="send-audio">Enviar</button>
+        </div>
         <form id="chat-form">
             <input type="text" id="message-input" placeholder="Digite sua mensagem...">
-            <button type="submit" id="send-button">Enviar</button>
-            <button type="button" id="audio-button">Gravar Áudio</button>
+            <button type="submit" id="send-button">➤</button>
+            <button type="button" id="audio-button">🎤</button>
         </form>
     </div>
-    <div id="audio-recording">Gravando...</div>
 
     <script>
         // Configuração do Firebase
@@ -147,9 +164,16 @@
         const messageInput = document.getElementById('message-input');
         const nameInput = document.getElementById('name-input');
         const audioButton = document.getElementById('audio-button');
-        const audioRecording = document.getElementById('audio-recording');
+        const audioControls = document.getElementById('audio-controls');
+        const audioTimer = document.getElementById('audio-timer');
+        const cancelAudioButton = document.getElementById('cancel-audio');
+        const sendAudioButton = document.getElementById('send-audio');
 
         let userName = '';
+        let mediaRecorder;
+        let audioChunks = [];
+        let timerInterval;
+        let recordingStartTime;
 
         nameInput.addEventListener('change', (e) => {
             userName = e.target.value.trim();
@@ -197,54 +221,82 @@
             }
         });
 
-        let mediaRecorder;
-        let audioChunks = [];
+        function startRecording() {
+            navigator.mediaDevices.getUserMedia({ audio: true })
+                .then(stream => {
+                    mediaRecorder = new MediaRecorder(stream);
+                    mediaRecorder.ondataavailable = e => {
+                        audioChunks.push(e.data);
+                    };
+                    mediaRecorder.start();
+                    audioControls.style.display = 'flex';
+                    chatForm.style.display = 'none';
+                    recordingStartTime = Date.now();
+                    updateTimer();
+                    timerInterval = setInterval(updateTimer, 1000);
+                })
+                .catch(error => {
+                    console.error('Erro ao acessar o microfone:', error);
+                });
+        }
+
+        function stopRecording() {
+            return new Promise(resolve => {
+                mediaRecorder.onstop = () => {
+                    const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
+                    resolve(audioBlob);
+                };
+                mediaRecorder.stop();
+            });
+        }
+
+        function updateTimer() {
+            const elapsedTime = Math.floor((Date.now() - recordingStartTime) / 1000);
+            const minutes = Math.floor(elapsedTime / 60).toString().padStart(2, '0');
+            const seconds = (elapsedTime % 60).toString().padStart(2, '0');
+            audioTimer.textContent = `${minutes}:${seconds}`;
+        }
 
         audioButton.addEventListener('click', () => {
             if (!userName) {
                 alert('Por favor, digite seu nome antes de enviar uma mensagem.');
                 return;
             }
-            if (audioButton.textContent === 'Gravar Áudio') {
-                navigator.mediaDevices.getUserMedia({ audio: true })
-                    .then(stream => {
-                        mediaRecorder = new MediaRecorder(stream, { mimeType: 'audio/webm' });
-                        mediaRecorder.ondataavailable = e => {
-                            audioChunks.push(e.data);
+            startRecording();
+        });
+
+        cancelAudioButton.addEventListener('click', () => {
+            clearInterval(timerInterval);
+            audioChunks = [];
+            audioControls.style.display = 'none';
+            chatForm.style.display = 'flex';
+            mediaRecorder.stream.getTracks().forEach(track => track.stop());
+        });
+
+        sendAudioButton.addEventListener('click', async () => {
+            clearInterval(timerInterval);
+            const audioBlob = await stopRecording();
+            audioControls.style.display = 'none';
+            chatForm.style.display = 'flex';
+
+            const reader = new FileReader();
+            reader.readAsDataURL(audioBlob);
+            reader.onloadend = function() {
+                const base64data = reader.result;
+                const storageRef = storage.ref('audio/' + Date.now() + '.webm');
+                storageRef.putString(base64data, 'data_url').then(snapshot => {
+                    snapshot.ref.getDownloadURL().then(downloadURL => {
+                        const message = {
+                            sender: userName,
+                            text: downloadURL,
+                            type: 'audio',
+                            timestamp: firebase.database.ServerValue.TIMESTAMP
                         };
-                        mediaRecorder.onstop = () => {
-                            const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
-                            const reader = new FileReader();
-                            reader.readAsDataURL(audioBlob);
-                            reader.onloadend = function() {
-                                const base64data = reader.result;
-                                const storageRef = storage.ref('audio/' + Date.now() + '.webm');
-                                storageRef.putString(base64data, 'data_url').then(snapshot => {
-                                    snapshot.ref.getDownloadURL().then(downloadURL => {
-                                        const message = {
-                                            sender: userName,
-                                            text: downloadURL,
-                                            type: 'audio',
-                                            timestamp: firebase.database.ServerValue.TIMESTAMP
-                                        };
-                                        database.ref('messages').push(message);
-                                    });
-                                });
-                            }
-                            audioChunks = [];
-                        };
-                        mediaRecorder.start();
-                        audioRecording.style.display = 'flex';
-                        audioButton.textContent = 'Parar Gravação';
-                    })
-                    .catch(error => {
-                        console.error('Erro ao acessar o microfone:', error);
+                        database.ref('messages').push(message);
                     });
-            } else if (audioButton.textContent === 'Parar Gravação') {
-                mediaRecorder.stop();
-                audioRecording.style.display = 'none';
-                audioButton.textContent = 'Gravar Áudio';
+                });
             }
+            audioChunks = [];
         });
     </script>
 </body>
