--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -3,93 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Online Cabana</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <title>Chat Administração</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            height: 100vh;
+            background-color: #f0f2f5;
         }
-        #sidebar {
-            width: 200px;
-            background-color: #f0f0f0;
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
-            overflow-y: auto;
         }
-        #chat-container {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            border-left: 1px solid #ccc;
-        }
-        #chat-header {
-            background-color: #075E54;
+        .chat-header {
+            background-color: #075e54;
             color: white;
             padding: 10px;
             text-align: center;
-            font-weight: bold;
         }
-        #chat-messages {
-            flex-grow: 1;
-            padding: 20px;
-            overflow-y: auto;
-            background-color: #E5DDD5;
-        }
-        #chat-form {
-            display: flex;
+        .chat-messages {
+            background-color: #e5ddd5;
+            height: 500px;
+            overflow-y: scroll;
             padding: 10px;
-            background-color: #F0F0F0;
-            align-items: center;
-        }
-        #message-input {
-            flex-grow: 1;
-            border: none;
-            border-radius: 20px;
-            padding: 10px 15px;
-            font-size: 14px;
-            background-color: white;
-        }
-        #send-button, #audio-button {
-            background-color: #075E54;
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 14px;
-            margin-left: 10px;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            border-radius: 5px;
         }
         .message {
+            background-color: white;
+            border-radius: 10px;
+            padding: 10px;
             margin-bottom: 10px;
-            padding: 8px 12px;
-            border-radius: 7px;
             max-width: 70%;
-            word-wrap: break-word;
         }
-        .sent {
-            background-color: #DCF8C6;
+        .message.sent {
+            background-color: #dcf8c6;
             margin-left: auto;
         }
-        .received {
-            background-color: white;
+        .input-area {
+            display: flex;
+            margin-top: 10px;
         }
-        .chat-item {
+        #messageInput {
+            flex-grow: 1;
             padding: 10px;
+            border: none;
+            border-radius: 20px;
+        }
+        #sendButton {
+            background-color: #075e54;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin-left: 10px;
+            border-radius: 20px;
             cursor: pointer;
-            border-bottom: 1px solid #ccc;
         }
-        .chat-item:hover {
-            background-color: #e0e0e0;
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="chat-header">
+            <h2>Chat Administração</h2>
+        </div>
+        <div class="chat-messages" id="chatMessages"></div>
+        <div class="input-area">
+            <input type="text" id="messageInput" placeholder="Digite uma mensagem...">
+            <button id="sendButton">Enviar</button>
+        </div>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
+        };
+
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        const chatMessages = document.getElementById('chatMessages');
+        const messageInput = document.getElementById('messageInput');
+        const sendButton = document.getElementById('sendButton');
+
+        sendButton.addEventListener('click', sendMessage);
+
+        function sendMessage() {
+            const message = messageInput.value.trim();
+            if (message) {
+                const timestamp = Date.now();
+                database.ref('messages').push({
+                    user: 'Admin',
+                    message: message,
+                    timestamp: timestamp,
+                    type: 'text'
+                });
+                messageInput.value = '';
+            }
         }
-        #clear-all-chats {
-            margin-top: 20px;
+
+        database.ref('messages').on('child_added', snapshot => {
+            const message = snapshot.val();
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message');
+            
+            if (message.type === 'text') {
+                messageElement.textContent = `${message.user}: ${message.message}`;
+            } else if (message.type === 'audio') {
+                const audio = document.createElement('audio');
+                audio.src = message.audioUrl;
+                audio.controls = true;
+                messageElement.textContent = `${message.user}: `;
+                messageElement.appendChild(audio);
+            }
+            
+            chatMessages.appendChild(messageElement);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        });
+    </script>
+</body>
+</html>
