--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -50,13 +50,28 @@
             border: none;
             border-radius: 20px;
         }
-        #sendButton {
+        #sendButton, #recordButton {
             background-color: #075e54;
             color: white;
             border: none;
             padding: 10px 20px;
             margin-left: 10px;
             border-radius: 20px;
+            cursor: pointer;
+        }
+        .audio-recording {
+            display: flex;
+            align-items: center;
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 20px;
+            margin-top: 10px;
+        }
+        .audio-recording-time {
+            margin-right: 10px;
+        }
+        .audio-recording-cancel {
+            margin-left: auto;
             cursor: pointer;
         }
     </style>
@@ -70,11 +85,18 @@
         <div class="input-area">
             <input type="text" id="messageInput" placeholder="Digite uma mensagem...">
             <button id="sendButton">Enviar</button>
+            <button id="recordButton">Gravar Áudio</button>
+        </div>
+        <div class="audio-recording" id="audioRecording" style="display: none;">
+            <span class="audio-recording-time" id="audioRecordingTime">00:00</span>
+            <span>Gravando áudio...</span>
+            <span class="audio-recording-cancel" id="audioRecordingCancel">X</span>
         </div>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <script>
         const firebaseConfig = {
@@ -90,12 +112,24 @@
 
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
+        const storage = firebase.storage();
 
         const chatMessages = document.getElementById('chatMessages');
         const messageInput = document.getElementById('messageInput');
         const sendButton = document.getElementById('sendButton');
+        const recordButton = document.getElementById('recordButton');
+        const audioRecording = document.getElementById('audioRecording');
+        const audioRecordingTime = document.getElementById('audioRecordingTime');
+        const audioRecordingCancel = document.getElementById('audioRecordingCancel');
+
+        let mediaRecorder;
+        let audioChunks = [];
+        let startTime;
+        let timerInterval;
 
         sendButton.addEventListener('click', sendMessage);
+        recordButton.addEventListener('click', toggleRecording);
+        audioRecordingCancel.addEventListener('click', cancelRecording);
 
         function sendMessage() {
             const message = messageInput.value.trim();
@@ -111,24 +145,16 @@
             }
         }
 
-        database.ref('messages').on('child_added', snapshot => {
-            const message = snapshot.val();
-            const messageElement = document.createElement('div');
-            messageElement.classList.add('message');
-            
-            if (message.type === 'text') {
-                messageElement.textContent = `${message.user}: ${message.message}`;
-            } else if (message.type === 'audio') {
-                const audio = document.createElement('audio');
-                audio.src = message.audioUrl;
-                audio.controls = true;
-                messageElement.textContent = `${message.user}: `;
-                messageElement.appendChild(audio);
+        function toggleRecording() {
+            if (mediaRecorder && mediaRecorder.state === 'recording') {
+                stopRecording();
+            } else {
+                startRecording();
             }
-            
-            chatMessages.appendChild(messageElement);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        });
-    </script>
-</body>
-</html>
+        }
+
+        function startRecording() {
+            navigator.mediaDevices.getUserMedia({ audio: true })
+                .then(stream => {
+                    mediaRecorder = new MediaRecorder(stream);
+                    mediaRecorder
