--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -3,94 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Administração</title>
+    <title>Chat Online</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f2f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
         }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .chat-header {
-            background-color: #075e54;
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-        .chat-messages {
-            background-color: #e5ddd5;
-            height: 500px;
-            overflow-y: scroll;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .message {
+        .chat-container {
+            width: 100%;
+            max-width: 600px;
             background-color: white;
             border-radius: 10px;
-            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+        .chat-messages {
+            height: 400px;
+            overflow-y: auto;
+            padding: 20px;
+        }
+        .message {
             margin-bottom: 10px;
-            max-width: 70%;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: #e0e0e0;
         }
-        .message.sent {
-            background-color: #dcf8c6;
-            margin-left: auto;
-        }
-        .input-area {
+        .chat-input {
             display: flex;
-            margin-top: 10px;
+            padding: 20px;
+            border-top: 1px solid #e0e0e0;
         }
         #messageInput {
             flex-grow: 1;
             padding: 10px;
-            border: none;
-            border-radius: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
-        #sendButton, #recordButton {
-            background-color: #075e54;
+        button {
+            margin-left: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
             color: white;
             border: none;
-            padding: 10px 20px;
-            margin-left: 10px;
-            border-radius: 20px;
+            border-radius: 5px;
             cursor: pointer;
         }
-        .audio-recording {
-            display: flex;
+        #recordButton {
+            background-color: #dc3545;
+        }
+        #audioRecording {
+            display: none;
             align-items: center;
-            background-color: #f0f0f0;
-            padding: 10px;
-            border-radius: 20px;
             margin-top: 10px;
         }
-        .audio-recording-time {
-            margin-right: 10px;
-        }
-        .audio-recording-cancel {
-            margin-left: auto;
-            cursor: pointer;
+        #recordingTime {
+            margin-left: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="chat-header">
-            <h2>Chat Administração</h2>
-        </div>
+    <div class="chat-container">
         <div class="chat-messages" id="chatMessages"></div>
-        <div class="input-area">
-            <input type="text" id="messageInput" placeholder="Digite uma mensagem...">
-            <button id="sendButton">Enviar</button>
-            <button id="recordButton">Gravar Áudio</button>
+        <div class="chat-input">
+            <input type="text" id="messageInput" placeholder="Digite sua mensagem...">
+            <button onclick="sendMessage()">Enviar</button>
+            <button id="recordButton" onclick="toggleRecording()">Gravar Áudio</button>
         </div>
-        <div class="audio-recording" id="audioRecording" style="display: none;">
-            <span class="audio-recording-time" id="audioRecordingTime">00:00</span>
-            <span>Gravando áudio...</span>
-            <span class="audio-recording-cancel" id="audioRecordingCancel">X</span>
+        <div id="audioRecording">
+            <span>Gravando...</span>
+            <span id="recordingTime">00:00</span>
         </div>
     </div>
 
@@ -100,36 +87,31 @@
 
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-            authDomain: "cabana-8d55e.firebaseapp.com",
-            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-            projectId: "cabana-8d55e",
-            storageBucket: "cabana-8d55e.appspot.com",
-            messagingSenderId: "706144237954",
-            appId: "1:706144237954:web:345c10370972486afc779b",
-            measurementId: "G-96Y337GYT8"
+            apiKey: "AIzaSyDTjBtRXYoJZwW5SgIfzQ8Q-Jp-rh1i5MI",
+            authDomain: "chatfastmoto.firebaseapp.com",
+            databaseURL: "https://chatfastmoto-default-rtdb.firebaseio.com",
+            projectId: "chatfastmoto",
+            storageBucket: "chatfastmoto.appspot.com",
+            messagingSenderId: "628249474801",
+            appId: "1:628249474801:web:ab6f4fb0b6883ff334c6e4",
+            measurementId: "G-3JQHMXJ6XH"
         };
 
         firebase.initializeApp(firebaseConfig);
+
         const database = firebase.database();
         const storage = firebase.storage();
 
         const chatMessages = document.getElementById('chatMessages');
         const messageInput = document.getElementById('messageInput');
-        const sendButton = document.getElementById('sendButton');
         const recordButton = document.getElementById('recordButton');
         const audioRecording = document.getElementById('audioRecording');
-        const audioRecordingTime = document.getElementById('audioRecordingTime');
-        const audioRecordingCancel = document.getElementById('audioRecordingCancel');
+        const recordingTime = document.getElementById('recordingTime');
 
         let mediaRecorder;
         let audioChunks = [];
         let startTime;
         let timerInterval;
-
-        sendButton.addEventListener('click', sendMessage);
-        recordButton.addEventListener('click', toggleRecording);
-        audioRecordingCancel.addEventListener('click', cancelRecording);
 
         function sendMessage() {
             const message = messageInput.value.trim();
@@ -140,8 +122,11 @@
                     message: message,
                     timestamp: timestamp,
                     type: 'text'
+                }).then(() => {
+                    messageInput.value = '';
+                }).catch((error) => {
+                    console.error("Erro ao enviar mensagem:", error);
                 });
-                messageInput.value = '';
             }
         }
 
@@ -155,3 +140,57 @@
 
         function startRecording() {
             navigator.mediaDevices.getUserMedia({ audio: true })
+                .then(stream => {
+                    mediaRecorder = new MediaRecorder(stream);
+                    mediaRecorder.start();
+                    audioChunks = [];
+                    startTime = Date.now();
+                    updateRecordingTime();
+                    timerInterval = setInterval(updateRecordingTime, 1000);
+                    recordButton.textContent = 'Parar Gravação';
+                    audioRecording.style.display = 'flex';
+
+                    mediaRecorder.addEventListener('dataavailable', event => {
+                        audioChunks.push(event.data);
+                    });
+
+                    mediaRecorder.addEventListener('stop', () => {
+                        clearInterval(timerInterval);
+                        const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
+                        uploadAudio(audioBlob);
+                    });
+                });
+        }
+
+        function stopRecording() {
+            if (mediaRecorder && mediaRecorder.state === 'recording') {
+                mediaRecorder.stop();
+                recordButton.textContent = 'Gravar Áudio';
+                audioRecording.style.display = 'none';
+            }
+        }
+
+        function uploadAudio(audioBlob) {
+            const timestamp = Date.now();
+            const audioRef = storage.ref(`audios/${timestamp}.webm`);
+            
+            audioRef.put(audioBlob).then(snapshot => {
+                snapshot.ref.getDownloadURL().then(downloadURL => {
+                    database.ref('messages').push({
+                        user: 'Admin',
+                        audioUrl: downloadURL,
+                        timestamp: timestamp,
+                        type: 'audio'
+                    });
+                });
+            });
+        }
+
+        function updateRecordingTime() {
+            const duration = Date.now() - startTime;
+            const seconds = Math.floor(duration / 1000) % 60;
+            const minutes = Math.floor(duration / 60000);
+            recordingTime.textContent = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+        }
+
+        database.ref('messages').on('child_added', snapshot => {
